[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/objects/diving_helm.png" type="Texture" id=1]
[ext_resource path="res://assets/art/bgs/lab_door.png" type="Texture" id=2]
[ext_resource path="res://scenes/Rooms/LabDoor.gd" type="Script" id=3]
[ext_resource path="res://assets/art/ui/back.png" type="Texture" id=4]
[ext_resource path="res://scenes/Inventory/Flashlight.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123.307, 127.399 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 61.2452
height = 40.2191

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[node name="LabDoor" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="to_lab" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_lab"]
position = Vector2( 306.345, 148.167 )
shape = SubResource( 1 )

[node name="ghost_hand" type="Area2D" parent="."]
position = Vector2( 308.347, 151.504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ghost_hand"]
scale = Vector2( 0.88, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ghost_hand"]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ghost_hand/Sprite"]

[node name="back" type="Area2D" parent="."]
position = Vector2( 616, 336 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="back"]
shape = SubResource( 3 )

[node name="back_button" type="Sprite" parent="back"]
texture = ExtResource( 4 )

[node name="Flashlight" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.764706 )
[connection signal="input_event" from="to_lab" to="." method="_on_to_lab_input_event"]
[connection signal="input_event" from="ghost_hand" to="." method="_on_ghost_hand_input_event"]
[connection signal="input_event" from="back" to="." method="_on_back_input_event"]
